Refatorado models e implementado crud para registros do scrap